# oauth2-shield

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: docker-build.yml
oauth_shield/: config.py  main.py  oauth2.py
site/: index.html
templates/: invalid_domain.html  login.html
